mob codeLab index and article public page

--- a/codeLab(P)/public/index.html
+++ b/codeLab(P)/public/index.html
@@ -26,32 +26,68 @@
           <header class="banner-header">
             <span class="data_top">
               <div class="pixel-text">
-                <span class="pixel-text_text">22</span>
+                <span class="pixel-text_text">23</span>
               </div>
+              <div class="board-container">
+                <div class="mouth-text">SEPTEMBER 2016</div>
+                <div class="site-text">TokenLin's codeLab</div>
+              </div>
+              <a href="#" class="sub-button">Sub+</a>
             </span>
-            <a href="#" class="button_top"></a>
           </header>
-          <section class="banner-slide"></section>
-          <section class="banner-count"></section>
+          <div class="banner-aside-left">
+            <section class="banner-slide">
+              <img src="img/test.jpg" alt="" />
+            </section>
+            <section class="banner-count">
+              <div class="count-block">
+                <span class="count-title">Release:</span>
+                <span class="count-data"><span class="weighty">4</span>/Week</span>
+              </div>
+              <div class="count-block">
+                <span class="count-title">Point:</span>
+                <span class="count-data"><span class="weighty">16</span>/Day</span>
+              </div>
+            </section>
+          </div>
           <aside class="banner-aside"></aside>
         </article>
-        <article class="">
+        <article class="article-item">
           <h1>测试标题</h1>
+          <h2>副标题</h2>
+          <div class="stick">
+            <img src="img/test.jpg" alt="" />
+          </div>
           <p>测试简略内容测试简略内容测试简略内容测试简略内容
-          测试简略内容测试简略内容测试简略内容测试简略内容
+          测试简略内容测试简略内容略内容测试简略略内容测试简略略内容测试简略略内容测试简略测试简略内容测试简略内容
         测试简略内容测试简略内容测试简略内容测试简略内容</p>
-          <img src="img/test.jpg" alt="" />
           <nav>
-            <a href="#">to Code</a>
-            <a href="#">to Article</a>
+            <a href="#">CodeRepo</a>
+            <span class="line"></span>
+            <a href="#">to Details</a>
           </nav>
         </article>
-        <article class="">
-          article
+        <article class="article-item">
+          <h1>测试标题</h1>
+          <h2>副标题</h2>
+          <div class="stick">
+            <img src="img/test.jpg" alt="" />
+          </div>
+          <p>测试简略内容测试简略内容测试简略内容测试简略内容
+          测试简略内容测试简略内容略内容测试简略略内容测试简略略内容测试简略略内容测试简略测试简略内容测试简略内容
+        测试简略内容测试简略内容测试简略内容测试简略内容</p>
+          <nav>
+            <a href="#">CodeRepo</a>
+            <span class="line"></span>
+            <a href="#">to Details</a>
+          </nav>
         </article>
+        <div class="loading">
+          Bottom of the Well
+        </div>
       </main>
       <footer>
-        <a href="#">More</a>
+        <a href="#">&#xe602;</a>
       </footer>
     </div>
   </body>
