--- a/codeLab(P)/codelab-front-src/index.html
+++ b/codeLab(P)/codelab-front-src/index.html
@@ -2,13 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>codelab-front</title>
-    <link rel="stylesheet" href="./src/assets/default.css" media="screen" title="no title">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>codelab-front-src</title>
   </head>
   <body>
-    <div class="9.9">
-
-    </div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
